ISAICP-5582: Fix licence tile on mobile

--- a/web/themes/joinup/prototype/sass/components/_listing.sass
+++ b/web/themes/joinup/prototype/sass/components/_listing.sass
@@ -194,8 +194,9 @@
         word-wrap: break-word
         word-break: break-all
     +breakpoint(mobile)
-      padding-bottom: 70px
       flex: 0 0 60%
+    +breakpoint(lg-desktop)
+      padding-bottom: 70px
 
 .listing__card--stats-container
   .listing__metadata
